# qq_music_download

./: .gitignore  README.md  credential.py  pyproject.toml  qqmusic_cred.pkl  requirements.txt  signin.py  song.py  songlist.py
.github/workflows/: release.yml
specs/: credential.spec  song.spec  songlist.spec
