[tool.poetry]
name = "qq-music-download"
version = "2.3.0"
description = "download music"
authors = ["tooplick <id6543156918@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "*", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiocache = "0.12.3"
aiofiles = "25.1.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.13.2"
aiosignal = "1.4.0"
anyio = "4.11.0"
attrs = "25.4.0"
certifi = "2025.10.5"
cffi = "2.0.0"
cryptography = "45.0.5"
frozenlist = "1.8.0"
h11 = "0.16.0"
h2 = "4.3.0"
hpack = "4.1.0"
httpcore = "1.0.9"
httpx = "0.28.1"
hyperframe = "6.1.0"
idna = "3.11"
multidict = "6.7.0"
mutagen = "1.47.0"
orjson = "3.11.4"
propcache = "0.4.1"
pycparser = "2.23"
qqmusic-api-python = "0.3.6"
sniffio = "1.3.1"
typing_extensions = "4.15.0"
yarl = "1.22.0"
qrcode = "^8.2"
pillow = "^12.0.0"
pyzbar = "^0.1.9"

[project]
name = "qq-music-download"
version = "2.2.1"
requires-python = ">=3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
